fix Animations